# joint_sim

./: .gitignore  Cargo.toml  Config.toml  index.html  settings.cfg
saved_generations/: 03-09-2023_18-30_gen0
src/: color_palette.rs  handles.rs  lib.rs  main.rs  organism_tester.rs  scene_manager.rs
src/collider_layer/: mod.rs
src/config/: mod.rs  structs.rs
src/controls/: camera.rs  control_state.rs  mod.rs  save.rs  ui.rs
src/generation/: config.rs  environment.rs  mod.rs  organism_builders.rs
src/organism/: body.rs  bone.rs  brain.rs  genome.rs  handles.rs  helper_fn.rs  joint.rs  mod.rs  muscle.rs  organism.rs  organism_list.rs
src/organism_constructor/: construction_grid.rs  construction_mode.rs  construction_zone.rs  constructor.rs  drag.rs  icons.rs  mod.rs  mode_menu.rs  part_menu.rs
src/scrolling_cam/: camera.rs  control_state.rs  mod.rs
src/world_object/: body.rs  bone.rs  brain.rs  joint.rs  mod.rs  muscle.rs
wasm/: index.html
