[package]
name = "joint_sim"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Enable a small amount of optimization in debug mode
[profile.dev]
codegen-units = 1
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.bevy_rapier2d]
opt-level = 3

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-Ctarget-feature=+crt-static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# leak-detect-allocator = { git = "https://github.com/lynnux/leak-detect-allocator.git" }
wasm-bindgen = "0.2.86"
bevy = "0.11.0"
# bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.22.0", features = ["wasm-bindgen"] }
bevy-inspector-egui = "0.19.0"
bevy-inspector-egui-rapier = "0.9.0"
serde = "1.0.163"
serde_json = "1.0.96"
nalgebra = "0.32.3"
rand = "0.8.5"
chrono = "0.4.28"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
