[package]
name = "joint_sim"
version = "0.2.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
codegen-units = 1
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.dev.package.bevy_rapier2d]
opt-level = 3

[dependencies]
# bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_rapier2d = "0.22.0"
bevy = "0.11.0"
chrono = { version = "0.4.28", features = ["wasmbind"] }
console_error_panic_hook = "0.1.7"
serde = "1.0.163"
serde_json = "1.0.96"
nalgebra = "0.32.3"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
